More comment fixes (for large screen collapsed mode)
git-svn-id: https://git.crowdfave.org/svn/crowdfavorite/code/wp-themes/carrington-personal/trunk@39100 546ca710-db30-0410-8887-d9dd8e66aff0

--- a/assets/css/build.css
+++ b/assets/css/build.css
@@ -1711,8 +1711,8 @@ but allow screen readers to see */
 }
 #social .social-comment-collapse > .social-comment-inner > .social-comment-header > .social-comment-author img {
 	height: 16px;
-	left: 0;
-	top: 10px;
+	right: 0;
+	top: 0;
 	width: 16px;
 }
 #social .social-comment-collapse .social-posted-from {
@@ -1962,6 +1962,12 @@ iPad (portrait)				768
 	
 	#social .social-comment-collapse > .social-comment-inner {
 		padding: 10px 0 10px 26px;
+	}
+	
+	#social .social-comment-collapse > .social-comment-inner > .social-comment-header > .social-comment-author img {
+		left: 0;
+		right: auto;
+		top: 10px;
 	}
 	
 	#social .social-nav .social-wordpress a span,
